static/docs/1.2.0/api/python/_sources/generated/gravitino.client.dto_converters.DTOConverters.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.client.dto\_converters.DTOConverters
==============================================

.. currentmodule:: gravitino.client.dto_converters

.. autoclass:: DTOConverters
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~DTOConverters.__init__
      ~DTOConverters.from_job_template_dto
      ~DTOConverters.to_catalog
      ~DTOConverters.to_catalog_update_request
      ~DTOConverters.to_job_template_dto
      ~DTOConverters.to_job_template_update_request
      ~DTOConverters.to_metalake_update_request
      ~DTOConverters.to_shell_job_template
      ~DTOConverters.to_spark_job_template
      ~DTOConverters.to_template_update_dto
   
   

   
   
   